# pytorch-3dunet

./: .gitignore  pyproject.toml
config/: mc_inference_config.yaml  mc_train_config.yaml
pytorch3dunet/: optuna_example.py  optuna_study.db  train.py
pytorch3dunet/pytorch3dunet/unet3d/: predictor.py  trainer.py
