[project]
name = "pytorch-3dunet"
version = "1.9.1"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "h5py>=3.14.0",
    "mlflow>=3.1.4",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "scikit-image>=0.24.0",
    "scipy>=1.13.1",
    "setuptools>=80.9.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "torch==2.7.1", # Explicit version for torch
    "torchvision==0.22.1", # Explicit version for torchvision
    "optuna>=4.7.0",
    "optuna-integration[mlflow]>=4.5.0",
    "simpleitk>=2.5.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.5.3",
]
